# smart_grid_backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  uv
.github/skills/smart-grid-backend-scaffold/: SKILL.md
app/: main.py
app/api/routes/: health.py  predict.py  upload.py
app/clients/: weather_client.py
app/core/: config.py
app/models/: model_adapter.py
app/schemas/: predict.py  upload.py
app/services/: csv_service.py  inference_service.py  weather_service.py
models/: .gitkeep
tests/: test_csv_service.py  test_inference_service.py  test_routes.py  test_weather_service.py
