[project]
name = "smart-grid-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy==1.8.14",
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "mypy==1.15.0",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "pydantic-settings==2.9.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.1.1",
    "python-multipart==0.0.9",
    "ruff==0.11.8",
    "uvicorn[standard]==0.34.2",
]
